--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -45,4 +45,10 @@ pipeline {
     always{
       echo 'Building multibranch pipeline for worker is completed..'}
     }
+    failure {
+      slackSend (channel: "instavoteg2", message: "Build Failed - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
+    }
+    success {
+      slackSend (channel: "instavoteg2", message: "Build Succeeded - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
+    }
   }
