--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
   }
   post{
     always{
-      echo 'Building multibranch pipeline for worker is completed..'}
+      echo 'Building multibranch pipeline for worker is completed..'
     }
     failure {
       slackSend (channel: "instavoteg2", message: "Build Failed - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
