--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
   }
   post{
     always{
-      echo 'Building multibranch pipeline for worker is completed..'}
+      echo 'Building multibranch pipeline for worker is completed..'
     }
     failure {
       slackSend (channel: "instavoteg2", message: "Build Failed - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
@@ -40,3 +40,4 @@ pipeline {
       slackSend (channel: "instavoteg2", message: "Build Succeeded - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
     }
   }
+}
