--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -11,6 +11,9 @@ pipeline {
   }
   stages{
     stage("build"){
+      when{
+        changeset "**/worker/**"
+      }
       steps{
         echo 'Compiling worker app'
         dir('worker'){
@@ -19,13 +22,27 @@ pipeline {
       }
     }
     stage("test"){
+      when{
+          changeset "**/worker/**"
+      }
       steps{
         echo 'Running Unit Tets on worker app'
+        dir('worker'){
+          sh 'mvn clean test'
+        }
       }
     }
     stage("package"){
+       when{
+          branch 'master'
+          changeset "**/worker/**"
+      }
       steps{
         echo 'Packaging worker app'
+        dir('worker'){
+          sh 'mvn package -DskipTests'
+          archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
+        }
       }
     }
   }
@@ -34,10 +51,10 @@ pipeline {
       echo 'Building multibranch pipeline for worker is completed..'
     }
     failure {
-      slackSend (channel: "instavoteg2", message: "Ilham - Build Failed - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
+      slackSend (channel: "instavoteg2", message: "Build Failed - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
     }
     success {
-      slackSend (channel: "instavoteg2", message: "Ilham - Build Succeeded - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
+      slackSend (channel: "instavoteg2", message: "Build Succeeded - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
     }
   }
 }
