--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,18 +1,21 @@
 pipeline {
-  agent{
-    docker{
-      image 'maven:3.6.1-jdk-8-slim'
-      args '-v $HOME/.m2:/root/.m2'
-    }
-  }
+  agent none
 
   tools{
     maven 'maven 3.6.1'
   }
+  
+  
   stages{
     stage("build"){
       when{
         changeset "**/worker/**"
+      }
+      agent{
+        docker{
+          image 'maven:3.6.1-jdk-8-slim'
+          args '-v $HOME/.m2:/root/.m2'
+        }
       }
       steps{
         echo 'Compiling worker app'
@@ -21,9 +24,17 @@ pipeline {
         }
       }
     }
+    
+    
     stage("test"){
       when{
           changeset "**/worker/**"
+      }
+      agent{
+        docker{
+          image 'maven:3.6.1-jdk-8-slim'
+          args '-v $HOME/.m2:/root/.m2'
+        }
       }
       steps{
         echo 'Running Unit Tets on worker app'
@@ -32,11 +43,20 @@ pipeline {
         }
       }
     }
+    
+    
     stage("package"){
-       when{
-          branch 'master'
+      when{
           changeset "**/worker/**"
       }
+      
+      agent{
+        docker{
+          image 'maven:3.6.1-jdk-8-slim'
+          args '-v $HOME/.m2:/root/.m2'
+        }
+      }
+      
       steps{
         echo 'Packaging worker app'
         dir('worker'){
@@ -45,6 +65,23 @@ pipeline {
         }
       }
     }
+    stage('docker-package'){
+          agent any
+          when{
+            changeset "**/worker/**"
+          }
+          steps{
+            echo 'Packaging worker app with docker'
+            script{
+              docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
+                  def workerImage = docker.build("initcron/worker:v${env.BUILD_ID}", "./worker")
+                  workerImage.push()
+                  workerImage.push("${env.BRANCH_NAME}")
+                  workerImage.push("latest")
+              }
+            }
+          }
+      }
   }
   post{
     always{
