--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -65,6 +65,7 @@ pipeline {
         }
       }
     }
+    
     stage('docker-package'){
           agent any
           when{
@@ -82,6 +83,17 @@ pipeline {
             }
           }
       }
+      stage('docker-package'){
+          agent any
+          when{
+            branch 'master'
+          }
+          steps{
+            echo 'Deploy instavote app with docker compose'
+            sh 'docker-compose down --remove '
+            sh 'docker-compose up -d'
+          }
+    }
   }
   post{
     always{
