--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -73,6 +73,8 @@ pipeline {
           }
           steps{
             echo 'Packaging worker app with docker'
+            pwd
+            
             script{
               docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
                   def workerImage = docker.build("ilosaurus/worker:v${env.BUILD_ID}", "./worker")
