update jenkinsfile vote

--- a/result/JenkinsFile
+++ b/result/JenkinsFile
@@ -4,19 +4,19 @@ pipeline {
   stages{
     agent {
       docker{
-          image 'python:2.7.16-slim'
+          image 'node:8.16.0-alpine'
           args '--user root'
       }
     }
 
     stage("build"){
       when{
-        changeset "**/vote/**"
+        changeset "**/result/**"
       }
       steps{
-        echo 'Compiling vote app'
-        dir('vote'){
-          sh 'pip install -r requirements.txt'
+        echo 'Compiling result app'
+        dir('result'){
+          sh 'npm install'
         }
       }
     }
@@ -24,18 +24,18 @@ pipeline {
     stage("test"){
       agent {
         docker{
-          image 'python:2.7.16-slim'
+          image 'node:8.16.0-alpine'
           args '--user root'
         }
       }
       when{
-          changeset "**/vote/**"
+          changeset "**/result/**"
       }
       steps{
-        echo 'Running Unit Tets on vote app'
-        dir('vote'){
-          sh 'pip install -r requirements.txt'
-          sh 'nosetest -v'
+        echo 'Running Unit Tets on result app'
+        dir('result'){
+          sh 'npm install'
+          sh 'npm test'
         }
       }
     }
@@ -43,15 +43,15 @@ pipeline {
     stage('docker-package'){
         agent any
         when{
-          changeset "**/vote/**"
+          changeset "**/result/**"
         }
         steps{
-          echo 'Packaging vote app with docker'
+          echo 'Packaging result app with docker'
           pwd
           
           script{
             docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
-                def workerImage = docker.build("ilosaurus/vote:v${env.BUILD_ID}", "./vote")
+                def workerImage = docker.build("ilosaurus/result:v${env.BUILD_ID}", "./result")
                 workerImage.push()
                 workerImage.push("${env.BRANCH_NAME}")
             }
@@ -62,7 +62,7 @@ pipeline {
   
   post{
     always{
-      echo 'Building multibranch pipeline for vote is completed..'
+      echo 'Building multibranch pipeline for result is completed..'
     }
     failure {
       slackSend (channel: "instavoteg2", message: "Build Failed - ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)")
