--- a/result/Jenkinsfile
+++ b/result/Jenkinsfile
@@ -43,6 +43,7 @@ pipeline {
         agent any
         when{
           changeset "**/result/**"
+          branch 'master'
         }
         steps{
           echo 'Packaging result app with docker'
