--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -45,6 +45,7 @@ pipeline {
         agent any
         when{
           changeset "**/vote/**"
+          branch 'master'
         }
         steps{
           echo 'Packaging vote app with docker'
