--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
           sh 'pip install --upgrade pip'
           sh 'pip install -r requirements.txt'
           // sh 'which nosetest'
-          sh 'nosetest -v'
+          sh 'nosetests -v'
         }
       }
     }
