--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -17,6 +17,7 @@ pipeline {
       steps{
         echo 'Compiling vote app'
         dir('vote'){
+          sh 'pip install --upgrade pip'
           sh 'pip install -r requirements.txt'
         }
       }
