--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,16 +8,6 @@ networks:
     driver: bridge
 
 services:
-  vote:
-    image: ilosaurus/vote:latest
-    build: ./vote
-    ports:
-      - 5000:80
-    depends_on:
-      - redis
-    networks:
-      - instavote
-
   redis:
     image: redis:alpine
     networks:
@@ -32,21 +22,31 @@ services:
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
 
-  result:
-    image: ilosaurus/result:latest
-    build: ./vote
-    ports:
-      - 5001:4000
+  worker:
+    image: ilosaurus/worker:latest
+    build: ./worker
     depends_on:
+      - redis
       - db
     networks:
       - instavote
 
-  worker:
-    image: ilosaurus/worker:latest
+  vote:
+    image: ilosaurus/vote:latest
     build: ./vote
+    ports:
+      - 5000:80
     depends_on:
       - redis
+    networks:
+      - instavote
+
+  result:
+    image: ilosaurus/result:latest
+    build: ./result
+    ports:
+      - 5001:4000
+    depends_on:
       - db
     networks:
       - instavote
