--- a/result/Jenkinsfile
+++ b/result/Jenkinsfile
@@ -51,6 +51,7 @@ pipeline {
             docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
                 def workerImage = docker.build("ilosaurus/result:v${env.BUILD_ID}", "./result")
                 workerImage.push()
+                workerImage.push("latest")
                 workerImage.push("${env.BRANCH_NAME}")
             }
           }
