--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -56,6 +56,7 @@ pipeline {
             docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
                 def workerImage = docker.build("ilosaurus/vote:v${env.BUILD_ID}", "./vote")
                 workerImage.push()
+                workerImage.push("latest")
                 workerImage.push("${env.BRANCH_NAME}")
             }
           }
