--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -78,8 +78,9 @@ pipeline {
               docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
                   def workerImage = docker.build("ilosaurus/worker:v${env.BUILD_ID}", "./worker")
                   workerImage.push()
+                  workerImage.push("latest")
                   workerImage.push("${env.BRANCH_NAME}")
-                  // workerImage.push("latest")
+                  
               }
             }
           }
