--- a/result/Dockerfile
+++ b/result/Dockerfile
@@ -4,10 +4,9 @@ WORKDIR /app
 
 COPY . . 
 
-RUN npm install  && npm audit fix 
-RUN ls
-RUN pwd
-
+RUN npm install  && \ 
+    npm audit fix 
+    
 EXPOSE 4000
 
 CMD ["npm", "start"]
